@@ -31,6 +31,7 @@ CSTAR_FLAGS = -Wall -g -O2 -fPIC -fexceptions
 
 override CFLAGS += -DUSE_VERSION=$(USE_VERSION)
 override CFLAGS += -DPOSTGIS_LIB_VERSION='"$(POSTGIS_LIB_VERSION)"'
+override CFLAGS += -DPOSTGIS_VERSION='"$(POSTGIS_VERSION)"'
 override CFLAGS += -DPOSTGIS_SCRIPTS_VERSION='"$(SCRIPTS_VERSION)"'
 override CFLAGS += -DPOSTGIS_BUILD_DATE='"$(POSTGIS_BUILD_DATE)"'
 
@@ -86,14 +87,14 @@ SA_OBJS=measures.o box2d.o ptarray.o lwgeom_api.o lwgeom.o lwpoint.o lwline.o lw
 OBJS=$(SA_OBJS) liblwgeom.o lwgeom_pg.o lwgeom_debug.o lwgeom_spheroid.o lwgeom_ogc.o lwgeom_functions_analytic.o $(JTS_OBJ) lwgeom_inout.o lwgeom_estimate.o lwgeom_functions_basic.o lwgeom_gist.o lwgeom_btree.o lwgeom_transform.o stringBuffer.o lwgeom_box.o lwgeom_box3d.o lwgeom_box2dfloat4.o lwgeom_chip.o lwgeom_svg.o lwgeom_gml.o lwgeom_triggers.o lwgeom_dump.o lwgeom_functions_lrs.o
 
 #OTHERS=y.output lex.yy.c wktparse.tab.c wktparse.tab.h lwpostgis.sql
-OTHERS=y.output lwpostgis.sql ../lwpostgis.sql postgis_geos_version.h
+OTHERS=y.output postgis_geos_version.h
 
-all: $(GEOS_RULES) ../lwpostgis.sql all-shared-lib
+all: $(GEOS_RULES) ../lwpostgis.sql ../lwpostgis_upgrade.sql all-shared-lib 
 
 enable_shared=yes
 include Makefile.shlib
 
-MODULE_FILENAME = $(LPATH)/$(shlib)
+MODULE_FILENAME = $(LPATH)/$(shlib_major)
 
 #---------------------------------------------------------------
 # Makefile targets
@@ -123,10 +124,10 @@ lwgeom_functions_basic.o: lwgeom_functions_basic.c profile.h
 
 # Shared library stuff
 
-../lwpostgis.sql: lwpostgis.sql
-	cp lwpostgis.sql ..
+../lwpostgis_upgrade.sql: ../lwpostgis.sql
+	perl ../utils/postgis_proc_upgrade.pl ../lwpostgis.sql > ../lwpostgis_upgrade.sql
 
-lwpostgis.sql: lwpostgis.sql.in
+../lwpostgis.sql: lwpostgis.sql.in
 	cpp -P -traditional-cpp -DUSE_VERSION=$(USE_VERSION) $< | sed -e 's:@MODULE_FILENAME@:$(MODULE_FILENAME):g;s:@POSTGIS_VERSION@:$(POSTGIS_VERSION):g;s:@POSTGIS_SCRIPTS_VERSION@:$(SCRIPTS_VERSION):g;s/@POSTGIS_BUILD_DATE@/$(POSTGIS_BUILD_DATE)/g' | grep -v '^#' > $@
 
 install: all install-lib-shared install-lwgeom-scripts
